--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS01_HTML</title>
-</head>
-<body>
-    <h1>WS01_HTML</h1>
-</body>
+  </head>
+  <body>
+    <h1>Welcome to my Page</h1>
+    <p>This is a paragraph.</p>
+    <img src="./images/OIP.webp" alt="Description of image" />
+  </body>
 </html>
