--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -9,5 +9,33 @@
     <h1>Welcome to my Page</h1>
     <p>This is a paragraph.</p>
     <img src="./images/OIP.webp" alt="Description of image" />
+    <h2>Ordered List</h2>
+    <ol>
+        <li>sali</li>
+        <li>lenkkeily</li>
+        <li>matkustelu</li>
+    </ol>
+    
+    <h2>Unordered List</h2>
+    <ul>
+        <li>sali
+        <li>lenkkeily</li>
+        <li>matkustelu</li>
+        <a href="https://www.laurea.fi">Visit Laurea</a>
+        <table>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+    </tr>
+    <tr>
+        <td>Row 1, Cell 1</td>
+        <td>Row 1, Cell 2</td>
+    </tr>
+    <tr>
+        <td>Row 2, Cell 1</td>
+        <td>Row 2, Cell 2</td>
+    </tr>
+    </table>
+    </ul>
   </body>
 </html>
