--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -11,33 +11,48 @@
     <img src="./images/OIP.webp" alt="Description of image" />
     <h2>Ordered List</h2>
     <ol>
-        <li>sali</li>
-        <li>lenkkeily</li>
-        <li>matkustelu</li>
+      <li>sali</li>
+      <li>lenkkeily</li>
+      <li>matkustelu</li>
     </ol>
-    
+
     <h2>Unordered List</h2>
     <ul>
-        <li>sali
-        <li>lenkkeily</li>
-        <li>matkustelu</li>
-        <a href="https://www.laurea.fi">Visit Laurea</a>
-        <table>
-    <tr>
-      <table>
-    <tr>
+      <li>sali</li>
+      <li>lenkkeily</li>
+      <li>matkustelu</li>
+      
+    </ul>
+    <a href="https://www.laurea.fi">Visit Laurea</a>
+
+    <table>
+      <tr>
         <th>Header 1</th>
         <th>Header 2</th>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Row 1, Cell 1</td>
+
         <td>Row 1, Cell 2</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Row 2, Cell 1</td>
         <td>Row 2, Cell 2</td>
-    </tr>
+      </tr>
     </table>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+      <input type="submit" value="Submit" />
+    </form
+ <h1 style="color: red;">This is a heading</h1>
+ <style>
+    h1 {
+      color: rgb(128, 0, 128);
+    }
+    </style>
 
   </body>
 </html>
