--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+    h1 {
+      color: green;
+    }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS01_HTML</title>
@@ -46,13 +51,17 @@
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" /><br /><br />
       <input type="submit" value="Submit" />
-    </form
- <h1 style="color: red;">This is a heading</h1>
- <style>
-    h1 {
-      color: rgb(128, 0, 128);
-    }
-    </style>
-
-  </body>
+    </form>
 </html>
+<link rel="stylesheet" href="styles.css">
+p {
+      color: blue;
+    }
+    
+    body {
+      background-color: lightgray;
+    }
+    
+    h1 {
+      font-size: 2em;
+    }
