--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
     h1 {
-      color: green;
+      color: rgb(215, 135, 204);
     }
     </style>
     <meta charset="UTF-8" />
