--- a/WS02_CSS/index.html
+++ b/WS02_CSS/index.html
@@ -1,11 +1,58 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WS02_CSS</title>
-</head>
-<body>
-    <h1>WS02_CSS</h1>
-</body>
+  <head>
+    <style>
+    h1 {
+      color: green;
+    }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/styles.css">
+    <title>WS01_HTML</title>
+  </head>
+  <body>
+    <h1>Welcome to my Page</h1>
+    <p>This is a paragraph.</p>
+    <img src="./images/OIP.webp" alt="Description of image" />
+    <h2>Ordered List</h2>
+    <ol>
+      <li>sali</li>
+      <li>lenkkeily</li>
+      <li>matkustelu</li>
+    </ol>
+
+    <h2>Unordered List</h2>
+    <ul>
+      <li>sali</li>
+      <li>lenkkeily</li>
+      <li>matkustelu</li>
+      
+    </ul>
+    <a href="https://www.laurea.fi">Visit Laurea</a>
+
+    <table>
+      <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+      </tr>
+      <tr>
+        <td>Row 1, Cell 1</td>
+
+        <td>Row 1, Cell 2</td>
+      </tr>
+      <tr>
+        <td>Row 2, Cell 1</td>
+        <td>Row 2, Cell 2</td>
+      </tr>
+    </table>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+      <input type="submit" value="Submit" />
+    </form>
 </html>
+
+
