--- a/WS03_CSS_Advanced/index.html
+++ b/WS03_CSS_Advanced/index.html
@@ -8,4 +8,20 @@
 <body>
     <h1>WS03_CSS_Advanced</h1>
 </body>
+<style> 
+.box {
+      width: 100px;
+      height: 100px;
+      background-color: #8ca0ff;
+      transition: background-color 0.5s ease-in-out, transform 0.5s ease-in-out;
+    }
+    .box:hover {
+      background-color: #ff8c8c;
+      transform: scale(1.2);
+    }
+    </style>
+</head>
+<body>
+  <div class="box"></div>
+</body>
 </html>
