--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -14,7 +14,7 @@
     <h1>Welcome to my Page</h1>
     <p>This is a paragraph.</p>
     <img src="./images/OIP.webp" alt="Description of image" />
-    <h2>Ordered List</h2>
+    <h2>minun harrastukset</h2>
     <ol>
       <li>sali</li>
       <li>lenkkeily</li>
@@ -52,20 +52,7 @@
       <input type="email" id="email" name="email" /><br /><br />
       <input type="submit" value="Submit" />
     </form>
+    <link rel="stylesheet" href="styles.css">
+
+  </body>
 </html>
-<link rel="stylesheet" href="styles.css">
-p {
-      color: blue;
-    }
-    
-    body {
-      background-color: lightgray;
-    }
-    
-    h1 {
-      font-size: 2em;
-    }
-    div {
-      padding: 20px;
-      margin: 10px;
-    }
