--- a/WS05_Resposive/index.html
+++ b/WS05_Resposive/index.html
@@ -9,3 +9,107 @@
     <h1>WS05_Resposive</h1>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <style>
+    h1 {
+      color: rgb(215, 135, 204);
+    }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WS01_HTML</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>Tervetuloa nettisivulleni</h1>
+    <p>Tässä kuva minusta</p>
+    <img src="./images/OIP.webp" alt="Description of image" />
+    <section>
+    <h2>Minun harrastukset</h2>
+    <ol>
+      <li>sali</li>
+      <li>lenkkeily</li>
+      <li>matkustelu</li>
+    </ol>
+
+    <button class="transition-button">Nappi</button>
+
+    <h2>Lempi matkakohteet</h2>
+    <ul>
+      <li>Kreikka</li>
+      <li>Bali</li>
+      <li>Beliini</li>
+
+      <nav class="responsive-nav">
+      <button class="menu-toggle">☰ Menu</button>
+      <ul class="nav-list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
+      <div class="animation-box"></div>
+      <div class="flex-container">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
+  <div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+  </div>
+      <div class="responsive-box">Resize the window to see the effect</div>
+<div class="responsive-container">
+      <div class="column">Column 1</div>
+      <div class="column">Column 2</div>
+    </div>
+    </ul>
+    <a href="https://www.laurea.fi">Visit Laurea</a>
+    <ul class="pseudo-list">
+        <li>Ripsiväri</li>
+        <li>Puuteri</li>
+        <li>Valokynä</li>
+        <li>Highlighter</li>
+      </ul>
+    </section>
+      <img src="path/to/image.jpg" alt="Sample Image" class="filter-image">
+      <img src="path/to/image.jpg" alt="Responsive Image" class="responsive-image">
+      <div class="media-query-box">Resize the window to see the effect</div>
+      <blockquote class="quote">
+        This is a sample quote.
+      </blockquote>
+
+
+    <table>
+      <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+      </tr>
+      <tr>
+        <td>Row 1, Cell 1</td>
+
+        <td>Row 1, Cell 2</td>
+      </tr>
+      <tr>
+        <td>Row 2, Cell 1</td>
+        <td>Row 2, Cell 2</td>
+      </tr>
+    </table>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+      <input type="submit" value="Submit" />
+    </form>
+    <link rel="stylesheet" href="styles.css">
+
+  </body>
+</html>
