--- a/WS05_Resposive/index.html
+++ b/WS05_Resposive/index.html
@@ -9,9 +9,10 @@
     <h1>WS05_Resposive</h1>
 </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<!DOCTYPE 
+<html
+  <head
+
     <style>
     h1 {
       color: rgb(215, 135, 204);
