--- a/WS06_Boostrap/index.html
+++ b/WS06_Boostrap/index.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WS06_Boostrap</title>
+    <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>WS06_Boostrap</h1>
-</body>
-</html>
+    <h1>Tervetuloa verkkokauppaan</h1>
+    <!-- Bootstrap JavaScript (place before closing </body> tag) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+
+   <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-12">Etusivu</div>
+        <div class="col-md-4 col-12">Tuotteet</div>
+          <div class="col-md-4 col-12">Asiakaspalvelu</div>
+      </div>
+    </div><nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Katso erikoistarjouksemme klikkaamalla tästä</a><button class="btn btn-primary">Klikkaa tästä</button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span> </button>
+    <div class="container mt-5"></div>
+    <div class="row"></div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Kannettavat tietokoneet</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Televisiot</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Älykoti ja turvallisuus</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container mt-5"></div>
+    <div class="row"></div>
+
+<div class="container mt-5"></div>
+    <div class="row"></div>
+
+<div class="card" style="width: 18rem;">
+      <img src="path/to/image.jpg" class="card-img-top" alt="Oma kuvasi">
+      <div class="card-body">
+        <h5 class="card-title">Kanta asiakaskortti</h5>
+        <p class="card-text">Liity kanta-asiakkaaksi ja saat erikoistarjouksia.</p>
+        <a href="#" class="btn btn-primary">Liity nyt!</a> <div class="card" style="width: 18rem;">
+      <img src="path/to/image.jpg" class="card-img-top" alt="Oma kuvasi"> <div class="card-body">
+        <h5 class="Etunimi Sukunimi">Klubijäsenyys</h5><p class="Etunimi Sukunimi">Liity klubijäseneksi ja kerää bonuspisteitä</p>
+        <a href="#" class="btn btn-primary">Tutustu etuihin täältä</a>
+      </div>
+    </div>
+      </div>
+       </div>
+       <div class="container mt-5"></div>
+    <div class="row"></div> 
+</div class =alert alert-warning Tutustu asiakkuusehtoihimme ennen liittymistä!
